<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="main_title">My Nanodegree Apps!</string>

    <string name="app_spotify">Spotify Streamer</string>
    <string name="app_scores">Scores App</string>
    <string name="app_library">Library App</string>
    <string name="app_bigger">Build It Bigger</string>
    <string name="app_reader">XYZ Reader</string>
    <string name="app_capstone">CAPSTONE: My Own App</string>

    <string name="action_bar_main_simple">List</string>
    <string name="action_bar_main_advance">List plus Icon</string>
    <string name="action_bar_main_grid">Grid</string>

    <string-array name="app_planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

</resources>
